--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,6 +1,9 @@
 table { 
   /* border-collapse: collapse; */
-  cursor: hand;
+}
+
+div.table { 
+  cursor: pointer;
 }
 
 td {
@@ -10,4 +13,25 @@ td {
 
 td.disabled { 
   color: grey;
+}
+
+.alert {
+  padding: 8px 35px 8px 14px;
+  margin-bottom: 18px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+  background-color: #fcf8e3;
+  border: 1px solid #fbeed5;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+.alert-success {
+  background-color: #dff0d8;
+  border-color: #d6e9c6;
+  color: #468847;
+}
+.alert-error {
+  background-color: #f2dede;
+  border-color: #eed3d7;
+  color: #b94a48;
 }
