--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,8 +1,8 @@
-table { 
+table {
   /* border-collapse: collapse; */
 }
 
-div.table { 
+div.table {
   cursor: pointer;
 }
 
@@ -11,9 +11,26 @@ td {
   border: 1px #000 solid;
 }
 
-td.disabled { 
+td.disabled {
   color: grey;
 }
+
+td.cplayer {
+  background-color: skyblue;
+}
+
+td.cplayer.locked {
+  background-color: navy;
+}
+
+td.oplayer {
+  background-color: red;
+}
+
+td.oplayer.locked {
+  background-color: maroon;
+}
+
 
 p#letters {
   height: 20px;
