Allow games to be deleted

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -10,6 +10,10 @@ div.disabled {
   background-color: #ededed;
 }
 
+a.warning {
+  border: 1px red solid;
+}
+
 td {
   padding: 15px;
   border: 1px #000 solid;
